<resources>
    <string name="app_name">Authentication Manager</string>
    <string name="button_mainActivity_start_dkg">Generate new credential</string>
    <string name="menu_option_authentication_start">Enable service</string>
    <string name="menu_option_authentication_stop">Disable service</string>
    <string name="menu_option_enable_bluetooth">Enable bluetooth</string>
    <string name="PRIORITY_LOW">low</string>
    <string name="PRIORITY_HIGH">high</string>
    <string name="PRIORITY_NORMAL">normal</string>
    <string name="PRIORITY_CRITICAL">critical</string>
    <string name="text_status_service_off">Status service:  Disabled</string>
    <string name="text_status_service_active">Status service: Active</string>
    <string name="text_status_service_inactive">Status service: Inactive</string>
    <string name="key_generation_fail">Cannot start key generation</string>
    <string name="notification_text_for_foreground_service">Authentication service enabled</string>
    <string name="not_service_status_active">Service became active</string>
    <string name="not_service_status_sleep">Service became inactive</string>
    <string name="not_service_status_disabled">Service was disabled</string>
    <string name="title_activity_distributed_key_generation">Key generation</string>


    <string name="error_fragment">Some error</string>
    <string name="default_login_name">Login</string>
    <string name="button_home_frag">Ok</string>
    <string name="button_sel_frag">Ok</string>
    <string name="done">Ok</string>
    <string name="default_name">Name</string>
    <string name="select_devices">select</string>
    <string name="finished">finished</string>
    <string name="generation">generation</string>
    <string name="options_text">Unselected options</string>
    <string name="selected_text">Selected options</string>
    <string name="generation_title_messages">Progress</string>
    <string name="text_button_run">Ok</string>
    <string name="button_debug_text">Debug</string>


    <string-array name="possible_weights">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="initial">
        <item>""</item>
    </string-array>
    <string name="available_credentials">Available credentials:</string>
    <string name="manage_credentials">Manage credentials</string>
    <string name="remote_keys">Remote keys:</string>
    <string name="remote_devices">Remote Devices:</string>
    <string name="local_keys">Local keys:</string>
    <string name="remove">Remove</string>
    <string name="add_new_secret">Add</string>
    <string name="recovery_text">Share generation in progress</string>
    <string name="text_finished_recovery">OK</string>
    <string name="text_start_recovery">Start</string>
    <string name="refresh">Refresh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_signature">Sign</string>
    <string name="some_error_occurred">Some error occurred</string>
    <string name="finish">Finish</string>
    <string name="leader">Leader</string>
    <string name="follwer">Follwer</string>
    <string name="refresh2">refresh</string>
    <string name="waiting_for_the_leader_to_connect">Waiting for the leader to connect</string>
    <string name="new_share">New</string>
    <string name="title_activity_receive_extend">ReceiveExtendActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="invalid_credential">Invalid credential</string>
    <string name="invalid_attempt">Invalid attempt</string>
</resources>