<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <Button
        android:id="@+id/button_dkg"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="80dp"
        android:onClick="onClickKeyGeneration"
        android:text="@string/button_mainActivity_start_dkg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_main_status_service"
        android:layout_width="252dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        android:text="@string/text_status_service_off"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_management" />

    <Button
        android:id="@+id/button_management"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:onClick="onClickKeyManagement"
        android:text="@string/manage_credentials"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_dkg" />

</androidx.constraintlayout.widget.ConstraintLayout>