<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".service.key.user.CredentialManagementFragment">

    <TextView
        android:id="@+id/textView_applicationName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_applicationName" />


    <TextView
        android:id="@+id/textView_number_of_local_keys_title"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/local_keys"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_login" />

    <TextView
        android:id="@+id/textView_number_of_local_keys"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView_number_of_local_keys_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_login" />

    <TextView
        android:id="@+id/textView_number_of_remote_keys_title"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/remote_keys"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_number_of_local_keys_title" />

    <TextView
        android:id="@+id/textView_number_of_remote_keys"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView_number_of_remote_keys_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_number_of_local_keys" />

    <TextView
        android:id="@+id/textView_number_of_remote_devices_title"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/remote_devices"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_number_of_remote_keys_title" />

    <TextView
        android:id="@+id/textView_number_of_remote_devices"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView_number_of_remote_devices_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_number_of_remote_keys" />

    <Button
        android:id="@+id/button_remove"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:text="@string/remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_number_of_remote_devices" />

    <Button
        android:id="@+id/button_extend"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:text="@string/add_new_secret"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_remove" />
</androidx.constraintlayout.widget.ConstraintLayout>