<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".service.key.user.DeviceSelectionFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_options"
        android:layout_width="273dp"
        android:layout_height="173dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_text_options" />

    <TextView
        android:id="@+id/display_text_options"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/options_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_text_selection"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/selected_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_options" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_selection"
        android:layout_width="269dp"
        android:layout_height="170dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_text_selection" />

    <Button
        android:id="@+id/button_submit_devices"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:text="@string/button_sel_frag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_selection" />

</androidx.constraintlayout.widget.ConstraintLayout>